[gd_scene load_steps=14 format=3 uid="uid://djqkx4l74qogm"]

[ext_resource type="Script" uid="uid://cnpbxqwl7xd14" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="FontFile" uid="uid://3f6jhjx4oirw" path="res://Assets/Fonts/BLADRMF_.TTF" id="2_1ehe0"]
[ext_resource type="PackedScene" uid="uid://bkxtkfjskoym5" path="res://Scenes/background.tscn" id="4_ce3w2"]
[ext_resource type="AudioStream" uid="uid://mrn8dqho5pqh" path="res://Assets/Music/time_for_adventure.mp3" id="4_n45e2"]
[ext_resource type="Script" uid="uid://dapciruitpk5n" path="res://Scripts/audio_slider.gd" id="4_opfnp"]
[ext_resource type="Script" uid="uid://b8j4eafe6swrr" path="res://Scripts/full_screen_button.gd" id="5_opfnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48xlc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48xlc"]
bg_color = Color(0.425571, 0.425571, 0.425571, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(0.427451, 0.427451, 0.427451, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erv1k"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ce3w2"]
color = Color(1, 1, 1, 1)
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_n45e2"]
color = Color(0.509804, 0.65098, 1, 1)
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_opfnp"]
color = Color(0.509804, 0.65098, 1, 1)
thickness = 10

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ehe0")

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -69.0
offset_right = 259.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Button" type="Button" parent="MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "Start Game"

[node name="Button2" type="Button" parent="MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "Load Game"

[node name="Button3" type="Button" parent="MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "Settings"

[node name="Button4" type="Button" parent="MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -258.0
offset_right = 182.0
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 50
text = "bladeborn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" parent="." instance=ExtResource("4_ce3w2")]

[node name="SettingsPopUp" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.5
offset_top = -131.0
offset_right = 328.5
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsPopUp"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="SettingsPopUp"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -42.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPopUp"]
layout_mode = 0
offset_left = 78.0
offset_top = 73.0
offset_right = 574.0
offset_bottom = 179.0
theme_override_constants/separation = 31

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPopUp/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="SettingsPopUp/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="AudioSlider" type="HSlider" parent="SettingsPopUp/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_ce3w2")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_n45e2")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_opfnp")
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("4_opfnp")
audio_bus_name = "Music"

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsPopUp/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPopUp/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Full Screen"

[node name="FullScreenButton" type="CheckButton" parent="SettingsPopUp/VBoxContainer/HBoxContainer2"]
layout_mode = 2
script = ExtResource("5_opfnp")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n45e2")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainMenuButtons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainMenuButtons/Button2" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MainMenuButtons/Button3" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenuButtons/Button4" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsPopUp/Back" to="." method="_on_back_settings_pressed"]
[connection signal="value_changed" from="SettingsPopUp/VBoxContainer/HBoxContainer/AudioSlider" to="SettingsPopUp/VBoxContainer/HBoxContainer/AudioSlider" method="_on_value_changed"]
[connection signal="toggled" from="SettingsPopUp/VBoxContainer/HBoxContainer2/FullScreenButton" to="SettingsPopUp/VBoxContainer/HBoxContainer2/FullScreenButton" method="_on_toggled"]
